@@ -22,6 +22,7 @@ SCRIPTS_PERL = script-email \
 	     ampgsql \
 	     amzfs-sendrecv \
 	     amzfs-snapshot \
+	     amrandom \
 	     amraw \
 	     amsamba \
 	     amsuntar
